# planet-incremental

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.rst
.github/workflows/: cmake.yml  docs.yml  lint.yml  release.yml
cmake/: modules.cmake
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: constants.hpp  logger.hpp  types.hpp
src/front/: CMakeLists.txt
src/front/include/front/: Front.hpp
src/front/src/: Front.cpp
src/game/: CMakeLists.txt
src/game/include/game/: Game.hpp
src/game/src/: Game.cpp
src/resources/: CMakeLists.txt
src/resources/include/: Tracked.hpp
src/resources/include/resources/: Elements.hpp  Resource.hpp  Tracked.hpp
src/resources/src/: Elements.cpp  Resource.cpp
src/resources/tests/: TrackedTests.cpp
src/statistics/: CMakeLists.txt
src/statistics/include/statistics/: Achievement.hpp  History.hpp  Tracker.hpp
src/statistics/src/: History.cpp  Tracker.cpp
src/statistics/tests/: HistoryTests.cpp  TrackerTests.cpp
src/world/: CMakeLists.txt
src/world/include/world/: Generator.hpp  Node.hpp  Planet.hpp  System.hpp  Universe.hpp
src/world/src/: Generator.cpp  Node.cpp  Planet.cpp  System.cpp  Universe.cpp
tool/: format  format_code
web/: index.html
